<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_30sdp"
        android:paddingBottom="@dimen/_30sdp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_register"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/describe_register"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_45sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/text_name_register"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/tvDescription" />

        <EditText
            android:id="@+id/etNameRegis"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:autofillHints=""
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_name_register"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/text_email_register"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <EditText
            android:id="@+id/etEmailRegis"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:autofillHints=""
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_email_register"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/pass_register"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <EditText
            android:id="@+id/etPasswordRegis"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/input_pw_register"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvPass" />

        <EditText
            android:id="@+id/rePasswordRegis"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/reinput_pw_register"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegis" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_100sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sex_register"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/etPasswordRegis" />

        <RadioGroup
            android:id="@+id/genderRegis"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvGender">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/male_register" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="match_parent"
                android:checked="true"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/female_register" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/DoB_register"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvGender" />


        <Button
            android:id="@+id/btnChooseDate"
            style="?android:spinnerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/hint_DoB_register"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvBirth" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/btnChooseDate">

            <Button
                android:id="@+id/btnRegis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/secondary"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btn_register"
                app:cornerRadius="15dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_to_login_register"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btn_login_register"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>