<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textSize="@dimen/_20ssp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilerg0"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_90sdp"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/textNameSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="Trang"
        android:textSize="@dimen/_15ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_weight="0.515"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp">


        <Button
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="25dp"
            android:drawableLeft="@drawable/chat_24"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/_12sdp"
            android:text="Nhắn tin"
            tools:ignore="Suspicious0dp" />

        <Button
            android:id="@+id/addFriend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/_12sdp"
            android:drawableLeft="@drawable/person_add_icon"
            android:text="Kết bạn"
            tools:ignore="Suspicious0dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/bg_icon"
        android:text="      ____________________________________________" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_weight="0.515"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:drawableLeft="@drawable/cake_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginRight="@dimen/_5sdp"
                android:textSize="@dimen/_16sdp"/>

            <TextView
                android:id="@+id/dateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10-07-2002"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_16sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:drawableLeft="@drawable/gender_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginRight="@dimen/_5sdp"
                android:textSize="@dimen/_16sdp"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_16sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:drawableLeft="@drawable/email_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginRight="@dimen/_5sdp"
                android:textSize="@dimen/_16sdp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="chang2002@gmail.com"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_16sdp"/>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>